[gd_scene format=3 uid="uid://bc1c613ljw68"]

[ext_resource type="Script" uid="uid://bo2e8cy60v8ek" path="res://scenes/monsters/monster.gd" id="1_monster"]
[ext_resource type="FontFile" uid="uid://0b4nme1fsr47" path="res://assets/bBambooGrove.ttf" id="2_w06ud"]

[sub_resource type="LabelSettings" id="LabelSettings_3366s"]
line_spacing = 1.0
font = ExtResource("2_w06ud")
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 15

[node name="Monster" type="CharacterBody2D" unique_id=1156037096]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_monster")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1792548942]

[node name="Visual" type="Node2D" parent="." unique_id=2001836849]

[node name="NameLabel" type="Label" parent="Visual" unique_id=1480585883]
z_index = 83
z_as_relative = false
offset_left = -49.0
offset_top = -50.0
offset_right = 51.0
offset_bottom = -30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Monster"
label_settings = SubResource("LabelSettings_3366s")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="ColorRect" parent="Visual" unique_id=334171048]
offset_left = -24.6
offset_top = -33.6
offset_right = 25.6
offset_bottom = -30.599998
metadata/_edit_use_anchors_ = true

[node name="HealthBarFill" type="ColorRect" parent="Visual" unique_id=487151785]
offset_left = -24.6
offset_top = -33.6
offset_right = 25.4
offset_bottom = -30.599998
color = Color(0.8, 0.101960786, 0.101960786, 1)
metadata/_edit_use_anchors_ = true

[node name="Shadow" type="Polygon2D" parent="Visual" unique_id=1400661981]
z_index = -1
color = Color(0, 0, 0, 0.3)
antialiased = true

[node name="Body" type="Polygon2D" parent="Visual" unique_id=479018089]
antialiased = true

[node name="AggroRange" type="Area2D" parent="." unique_id=1030098139]
collision_layer = 0

[node name="AggroCollision" type="CollisionShape2D" parent="AggroRange" unique_id=167663732]

[node name="AttackRange" type="Area2D" parent="." unique_id=539723929]
collision_layer = 0

[node name="AttackCollision" type="CollisionShape2D" parent="AttackRange" unique_id=398466663]

[node name="HitSound" type="AudioStreamPlayer" parent="." unique_id=1966567573]

[node name="DeathSound" type="AudioStreamPlayer" parent="." unique_id=1391237761]
